<resources>
    <string name="personal_app_name">PersonalComponent</string>

    <!--通用-->
    <string name="personal_cancel">取消</string>
    <string name="personal_ok">确定</string>
    <string name="personal_m">男</string>
    <string name="personal_fm">女</string>
    <string name="personal_edit">修改</string>

    <!--个人页面-->
    <string name="personal_me_showqu">晒趣</string>
    <string name="personal_me_act">话题</string>
    <string name="personal_me_account">钻石账户</string>
    <string name="personal_me_lable">我的标签</string>
    <string name="personal_me_feedback">意见反馈</string>
    <string name="personal_me_share">安利一下</string>
    <string name="personal_me_about">关于往往</string>
    <string name="personal_me_eva">赏个好评</string>
    <string name="personal_me_represent">代言收益</string>

    <!--个人详情页面-->
    <string name="personal_medetail_title">个人信息</string>
    <string name="personal_medetail_header">头像</string>
    <string name="personal_medetail_name">昵称</string>
    <string name="personal_medetail_gender">性别</string>
    <string name="personal_medetail_old">年龄</string>
    <string name="personal_medetail_address">地区</string>
    <string name="personal_medetail_photo">个人相册</string>
    <string name="personal_medetail_sign">个性签名</string>
    <string name="personal_medetail_dialog_pic">官方图库</string>
    <string name="personal_medetail_dialog_camera">拍摄</string>
    <string name="personal_medetail_dialog_photo">相册</string>
    <string name="personal_medetail_dialog_inputsign_title">输入个性签名</string>
    <string name="personal_medetail_dialog_inputsign_note">最多输入15个字</string>
    <string name="personal_medetail_dialog_inputsign_hint">请输入个性签名</string>
    <string name="personal_medetail_dialog_inputname_title">输入新昵称</string>
    <string name="personal_medetail_dialog_inputname_note">最多输入12个字</string>
    <string name="personal_medetail_dialog_inputname_hint">输入新昵称</string>

    <!--个人详情照片页面-->
    <string name="personal_mephoto_title">设置照片</string>
    <string name="personal_mephoto_note">其他用户可在发现有趣的人中看到你的照片</string>
    <string name="personal_mephoto_add">添加图片</string>

    <!--个人详情照片页面-->
    <string name="personal_officialphoto_title">官方图库</string>

    <!--设置页面-->
    <string name="personal_setting_title">设置</string>
    <string name="personal_setting_cate_secret">隐私</string>
    <string name="personal_setting_cate_com">通用</string>
    <string name="personal_setting_cate_notice">通知</string>
    <string name="personal_setting_modifypsw">修改密码</string>
    <string name="personal_setting_bindphone">绑定手机</string>
    <string name="personal_setting_bindsocial">关联第三方账户</string>
    <string name="personal_setting_secret">个人隐私</string>
    <string name="personal_setting_clear">清除缓存</string>
    <string name="personal_setting_shutdownlist">趣晒屏蔽列表</string>
    <string name="personal_setting_blanklist">好友黑名单</string>
    <string name="personal_setting_msg">新消息通知</string>
    <string name="personal_setting_logout">退出当前账号</string>
    <string name="personal_setting_dialog_weixin">绑定微信</string>
    <string name="personal_setting_dialog_weibo">绑定微博</string>
    <string name="personal_setting_dialog_qq">绑定QQ</string>
    <string name="personal_setting_dialog_binded">已绑定</string>

    <!--设置消息页面-->
    <string name="personal_setting_msg_title">新消息通知</string>
    <string name="personal_setting_msg_note">锁屏时你的手机希望接收到消息么？</string>
    <string name="personal_setting_msg_newmsg">接受新消息通知</string>
    <string name="personal_setting_msg_msgdetail">通知显示详情</string>
    <string name="personal_setting_msg_msgdetail_note">若关闭，通知提示将不显示发信人和内容摘要</string>
    <string name="personal_setting_msg_voice">声音</string>
    <string name="personal_setting_msg_share">震动</string>

    <!--意见反馈页面-->
    <string name="personal_feedback_title">意见反馈</string>
    <string name="personal_feedback_btn_right">提交</string>
    <string name="personal_feedback_notice_feedback">小往一定会仔细阅读您的意见哦~</string>
    <string name="personal_feedback_hint_feedback">您的意见很重要，感谢您帮助我们~</string>
    <string name="personal_feedback_addphoto">添加图片</string>
    <string name="personal_feedback_notice_addphoto">增加图片表述能更好的让我们知道您的意见，阿里嘎多！</string>
    <string name="personal_feedback_phone">手机号</string>
    <string name="personal_feedback_notice_phone">留下您的手机号，如果您的提议被采纳，将有机会成为我们的专属用户</string>
    <string name="personal_feedback_hint_phone">请输入手机号</string>
    <string name="personal_feedback_help">为什么希望得到您的意见？</string>

    <!--我的账户页面-->
    <string name="personal_account_title">我的账户</string>
    <string name="personal_account_btn_right">明细</string>
    <string name="personal_account_note">钻石可用于查看付费内容/参与游戏</string>
    <string name="personal_account_diamond_left">钻石数：</string>
    <string name="personal_account_diamond_right">兑换宝石</string>
    <string name="personal_account_diamond_deposible">价值：</string>
    <string name="personal_account_stone_left">宝石数：</string>
    <string name="personal_account_stone_about">宝石相关</string>
    <string name="personal_account_btn_recharge">充值</string>
    <string name="personal_account_btn_diposit">提现</string>
    <string name="personal_account_stonenotice_title">&#8195;&#8195;宝石是用于产品中消费使用，可用于：支付阅读费用、创建趣聊和觅聊</string>
    <string name="personal_account_stonenotice_note">（宝石只能通过钻石兑换或官方赠送）</string>

    <!--我的账户兑换宝石页面-->
    <string name="personal_account_exchange_title">兑换宝石</string>
    <string name="personal_account_exchange_note">宝石可用于非收益付费功能的支付</string>
    <string name="personal_account_exchange_card_left">拥有宝石</string>
    <string name="personal_account_exchange_card_right">拥有钻石</string>
    <string name="personal_account_exchange_exchange">兑换比例</string>
    <string name="personal_account_exchange_exchange_lv">1 钻石: 20宝石</string>
    <string name="personal_account_exchange_exchange_sub">宝石：</string>
    <string name="personal_account_exchange_exchange_note">兑换宝石的钻石数量</string>
    <string name="personal_account_exchange_exchange_hint">请输入...</string>
    <string name="personal_account_exchange_btn_go">确认兑换</string>

    <!--我的账户提现页面-->
    <string name="personal_account_deposit_title">账户提现</string>
    <string name="personal_account_deposit_btn_right">提现记录</string>
    <string name="personal_account_deposit_note">请通过支付宝账户提现</string>
    <string name="personal_account_deposit_card">可提现钻石</string>
    <string name="personal_account_deposit_amount">提现金额</string>
    <string name="personal_account_deposit_amount_hint">请输入提现金额</string>
    <string name="personal_account_deposit_amount_error">当钻石数100以上才允许提现</string>
    <string name="personal_account_deposit_zhifubao">支付宝账户</string>
    <string name="personal_account_deposit_zhifubao_hint">请输入支付宝账号</string>
    <string name="personal_account_deposit_realname">支付宝真实姓名</string>
    <string name="personal_account_deposit_realname_hint">请输入支付宝注册时的真实姓名</string>
    <string name="personal_account_deposit_submit">确认提现</string>
    <string name="personal_account_deposit_remind">在提现之前，请确认您的支付宝账号是否输入准确</string>

    <!--我的账户提现记录页面-->
    <string name="personal_account_deposit_record_title">账户提现</string>
    <string name="personal_account_deposit_record_btn_right">收支明细</string>
    <string name="personal_account_deposit_record_note">请通过支付宝账户提现</string>
    <string name="personal_account_deposit_record_card">累计提现</string>
    <string name="personal_account_deposit_record_card_use">累计消耗的钻石</string>
    <string name="personal_account_deposit_record_detail">明细</string>
    <string name="personal_account_deposit_record_pop_all">全部</string>
    <string name="personal_account_deposit_record_pop_in">收入</string>
    <string name="personal_account_deposit_record_pop_out">支出</string>

    <!--我的账户收支明细页面-->
    <string name="personal_account_deposit_detail_title">收支明细</string>
    <string name="personal_account_deposit_detail_note">钻石收支记录</string>

    <!--我的账户充值页面-->
    <string name="personal_account_recharge_title">充值</string>
    <string name="personal_account_recharge_note">钻石充值后仅能于本产品中使用</string>
    <string name="personal_account_recharge_payway_ali">支付宝支付</string>
    <string name="personal_account_recharge_payway_wx">微信支付</string>

    <!--好友黑名单页面-->
    <string name="personal_blacklist_title">好友黑名单</string>
    <string name="personal_blacklist_title_note">他/她们都是你曾经厌恶的人</string>
    <string name="personal_blacklist_btn_right">全部取消</string>
    <string name="personal_blacklist_btn_free">取消\n黑名单</string>

    <!--好友黑名单页面-->
    <string name="personal_shutdown_title">趣晒屏蔽列表</string>
    <string name="personal_shutdown_title_note">此功能，仅影响趣晒是否显示</string>
    <string name="personal_shutdown_btn_right">全部取消</string>
    <string name="personal_shutdown_btn_free">取消屏蔽</string>

    <!--关于往往页面-->
    <string name="personal_about_btn_right">常见问题</string>

    <!--常见问题页面-->
    <string name="personal_question_title">常见问题</string>
    <string name="personal_question_note">若未查找到您想知道的问题，请使用往往官方联系我们</string>
    <string name="personal_question_1">关于趣晒/话题</string>
    <string name="personal_question_2">关于趣聊</string>
    <string name="personal_question_3">关于账户</string>
    <string name="personal_question_other">其他问题</string>
    <string name="personal_question_version">版本更新历史</string>

    <!--历史版本页面-->
    <string name="personal_version_history_title">版本更新历史</string>
    <string name="personal_version_history_title_note">帮助您更好地了解产品的使用方法</string>
    <string name="personal_version_history_tag">曾经的往往</string>

    <!--个人隐私页面-->
    <string name="personal_privacy_title">个人隐私</string>
    <string name="personal_privacy_note">仅针对个人名片展示</string>
    <string name="personal_privacy_friend">好友</string>
    <string name="personal_privacy_ql">趣聊</string>
    <string name="personal_privacy_qs">趣晒</string>
    <string name="personal_privacy_topic">话题</string>
    <string name="personal_privacy_showold">不对他人展示年龄</string>
    <string name="personal_privacy_default">公开</string>

    <!--个人隐私展示列表页面-->
    <string name="personal_privacy_showlist_title_friend">好友展示</string>
    <string name="personal_privacy_showlist_title_ql">趣聊展示</string>
    <string name="personal_privacy_showlist_title_qs">趣晒展示</string>
    <string name="personal_privacy_showlist_title_topic">话题展示</string>
    <string name="personal_privacy_showlist_note">仅针对个人名片展示</string>
    <string name="personal_privacy_showlist_public">公开</string>
    <string name="personal_privacy_showlist_me">仅自己可见</string>
    <string name="personal_privacy_showlist_friend">好友可见</string>
    <string name="personal_privacy_showlist_chat">趣聊/觅聊可见</string>
    <string name="personal_privacy_showlist_btn_right">确定</string>

    <!--我的标签页面-->
    <string name="personal_lable_title">我的标签</string>
    <string name="personal_lable_note">设置兴趣标签，信息服务更精准</string>
    <string name="personal_lable_btn_right_edit">编辑</string>
    <string name="personal_lable_btn_right_finish">完成</string>
    <string name="personal_lable_show_title">名片展示标签</string>
    <string name="personal_lable_show_note">名片中只能展示4个标签</string>
    <string name="personal_lable_me_title">个人标签</string>
    <string name="personal_lable_me_note">你的兴趣都在这里</string>
    <string name="personal_lable_flb">没有合适的？</string>

    <!--我的二维码-->
    <string name="personal_qrcode_title">我的二维码</string>
    <string name="personal_qrcode_notice">扫描上面二维码，添加往往好友</string>

    <!--代言收益页面-->
    <string name="personal_represent_title">代言收益</string>
    <string name="personal_represent_note">代言收益齐分享，社交也能变现！</string>
    <string name="personal_represent_rule">代言收益规则</string>
    <string name="personal_represent_code">您的邀请码</string>
    <string name="personal_represent_diamond">您已获得的宝石</string>
    <string name="personal_represent_user">下线用户</string>
    <string name="personal_represent_item_diamond">回馈宝石</string>

    <!--支付结果页面-->
    <string name="personal_account_payresult_cancel">充值取消!</string>
    <string name="personal_account_payresult_success">充值成功!</string>
    <string name="personal_account_payresult_faild">充值失败!</string>
    <string name="personal_account_payresult_ok">知道了</string>
</resources>
